Fixed alignment issues with error-list.

--- a/frontend/sass/common.blocks/_error-list.scss
+++ b/frontend/sass/common.blocks/_error-list.scss
@@ -3,6 +3,7 @@
 .error-list {
   display: flex;
   min-height: 20px;
+  align-items: center;
 }
 
 .error-list__msg {
